# Snippy

./: .gitmodules  README.md
src/: main.html  main.js  recording.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: gptv.rs  main.rs
