[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[net.git-fetch-with-cli]

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = ["devtools"] }
lazy_static = "1.4"
parking_lot = "0.12"
png = "0.17"
base64 = "0.22"
tokio = { version="1.37.0", features = ["time"] }

[target.'cfg(windows)'.dependencies]
crabgrab = { path = "../CrabGrab", features = ["bitmap", "screenshot", "dx11"] }

[target.'cfg(target_os = "macos")'.dependencies]
crabgrab = { path = "../CrabGrab", features = ["bitmap", "screenshot"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
